Fix spacing on radios (should match checkboxes)

--- a/styles/phenotypes.css
+++ b/styles/phenotypes.css
@@ -810,7 +810,7 @@ hr {
   line-height: 21px;
   letter-spacing: 0px;
   font-weight: normal;
-  padding-left: 21px;
+  padding-left: 23px;
   display: inline-block;
   margin: 0;
   position: relative; }
@@ -881,7 +881,7 @@ hr {
   line-height: 18px;
   letter-spacing: 0px;
   font-weight: normal;
-  padding-left: 19px; }
+  padding-left: 21px; }
   .Radio--small .Radio__indicator {
     height: 14px;
     top: 1px;
@@ -897,7 +897,7 @@ hr {
   line-height: 21px;
   letter-spacing: 0px;
   font-weight: normal;
-  padding-left: 21px; }
+  padding-left: 23px; }
   .Radio--medium .Radio__indicator {
     height: 16px;
     top: 1px;
@@ -913,7 +913,7 @@ hr {
   line-height: 27px;
   letter-spacing: 0px;
   font-weight: normal;
-  padding-left: 28px; }
+  padding-left: 32px; }
   .Radio--large .Radio__indicator {
     height: 21px;
     top: 2px;
@@ -930,7 +930,7 @@ hr {
     line-height: 18px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 19px; }
+    padding-left: 21px; }
     .Radio--small-sm .Radio__indicator {
       height: 14px;
       top: 1px;
@@ -945,7 +945,7 @@ hr {
     line-height: 21px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 21px; }
+    padding-left: 23px; }
     .Radio--medium-sm .Radio__indicator {
       height: 16px;
       top: 1px;
@@ -960,7 +960,7 @@ hr {
     line-height: 27px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 28px; }
+    padding-left: 32px; }
     .Radio--large-sm .Radio__indicator {
       height: 21px;
       top: 2px;
@@ -977,7 +977,7 @@ hr {
     line-height: 18px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 19px; }
+    padding-left: 21px; }
     .Radio--small-md .Radio__indicator {
       height: 14px;
       top: 1px;
@@ -992,7 +992,7 @@ hr {
     line-height: 21px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 21px; }
+    padding-left: 23px; }
     .Radio--medium-md .Radio__indicator {
       height: 16px;
       top: 1px;
@@ -1007,7 +1007,7 @@ hr {
     line-height: 27px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 28px; }
+    padding-left: 32px; }
     .Radio--large-md .Radio__indicator {
       height: 21px;
       top: 2px;
@@ -1024,7 +1024,7 @@ hr {
     line-height: 18px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 19px; }
+    padding-left: 21px; }
     .Radio--small-lg .Radio__indicator {
       height: 14px;
       top: 1px;
@@ -1039,7 +1039,7 @@ hr {
     line-height: 21px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 21px; }
+    padding-left: 23px; }
     .Radio--medium-lg .Radio__indicator {
       height: 16px;
       top: 1px;
@@ -1054,7 +1054,7 @@ hr {
     line-height: 27px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 28px; }
+    padding-left: 32px; }
     .Radio--large-lg .Radio__indicator {
       height: 21px;
       top: 2px;
@@ -1071,7 +1071,7 @@ hr {
     line-height: 18px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 19px; }
+    padding-left: 21px; }
     .Radio--small-xl .Radio__indicator {
       height: 14px;
       top: 1px;
@@ -1086,7 +1086,7 @@ hr {
     line-height: 21px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 21px; }
+    padding-left: 23px; }
     .Radio--medium-xl .Radio__indicator {
       height: 16px;
       top: 1px;
@@ -1101,7 +1101,7 @@ hr {
     line-height: 27px;
     letter-spacing: 0px;
     font-weight: normal;
-    padding-left: 28px; }
+    padding-left: 32px; }
     .Radio--large-xl .Radio__indicator {
       height: 21px;
       top: 2px;
